--- a/client/src/components/Cart/fullcart.css
+++ b/client/src/components/Cart/fullcart.css
@@ -22,7 +22,7 @@
     /* display:flex;
     flex-direction:column; */
     background-color: #ffffff;
-    min-height: 175vh;
+    min-height: 50vh;
    
     margin:6px;
     /* border-radius: 6px; */
@@ -32,13 +32,14 @@
 .full-cart{
     display:flex;
     flex-direction: column;
-    /* border-top:1px solid black; */
-    min-height: 75vh;
+    /* border:1px solid black; */
+    min-height:50vh;
     width:45%;
     margin-left:auto;
     margin-right:auto;
     position: relative;
-    margin-top:45px;
+    margin-top:2%;
+    margin-bottom:2%;
     box-shadow:0 0 5px rgba(117, 116, 116, 0.8);
   
       
@@ -48,7 +49,7 @@
 }
 .full-cart-header{
     background-color: #ffffff;
-    margin-top:20px ;
+    /* margin-top:20px ; */
     text-align: center;
     /* border-top:1px solid #ccc;
     border-left:1px solid #ccc;
