--- a/client/src/components/LatestDealsPage/latestDeals.css
+++ b/client/src/components/LatestDealsPage/latestDeals.css
@@ -5,7 +5,8 @@
 .latest-deals-container{
     display:flex;
     flex-direction:column;
-    margin-top:0.3%;
+    margin-top:0.5%;
+    margin-bottom:0.6%;
     /* border:1px solid black; */
   }
 
