--- a/client/src/index.css
+++ b/client/src/index.css
@@ -31,6 +31,9 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+a,button{
+  outline:none;
+}
 .product-bttn{
   /* border:1px solid red; */
   margin-top:auto;
