split signup component into varios modules

--- a/client/src/components/Login/login.css
+++ b/client/src/components/Login/login.css
@@ -195,17 +195,15 @@ background-size:100% 2px,100% 2px,100% ;
     font-size: 1em;
     font-family:'acme';
     font-weight: bold;
-    transition:all 0.5s ease-in-out;
+    transition:all 0.3s ease-in-out;
     color:#ffffff;
    
 
 }
 .login-panel button:hover{
-    background-color: #f1f1f1;
+    background-color:#292b2c;
     color:rgb(218, 152, 218);
-    border:2px solid rgb(218, 152, 218);
     cursor:pointer;
-    text-decoration:underline;
 
 }
 .signup-link{
