--- a/client/src/components/404/404.css
+++ b/client/src/components/404/404.css
@@ -5,7 +5,7 @@
 
 
 
-.container-not{
+.not-found-container{
     /* border:1px solid black; */
     background-color:#ffffff;
     min-height: 60vh;
@@ -14,7 +14,7 @@
 
 }
 
-.not-found{
+.not-found-content{
   
     position:relative;
     top:14px;
