--- a/client/src/components/Checkout/checkout.css
+++ b/client/src/components/Checkout/checkout.css
@@ -52,9 +52,13 @@
 .checkout-product{
     display:flex;
     flex-direction:column;
-    align-items: center;
+    /* align-items: center; */
     padding:8px;
-    border-bottom:1px solid #ccc;
+    width: 60%;
+    margin-left:auto;
+    margin-right: auto;
+    padding:0 0 4% 5%;
+    border:1px solid #ccc;
 
 }
 .checkout-data{
