--- a/client/src/components/Dashboard/dashboard.css
+++ b/client/src/components/Dashboard/dashboard.css
@@ -12,42 +12,75 @@
 
 
 .dashboard-container{
-    min-height: 60vh; 
-    height:100%;
+    min-height: 75vh; 
     background-color:#ffffff;
-    margin-bottom: 12px;  
-    margin-right: 12px; 
-    margin-top: 12px; 
+    margin-bottom: 0.4%;  
+    margin-right: 1%; 
+    margin-top: 0.4%; 
     position:relative;
-    /* top:-14px;    */
 }
 .users-container{
-    /* display:flex;
-    flex-direction:row; */
-    /* border:1px solid black; */
-    /* margin:4px; */
-    /* width:70%;
-    margin-left:auto;
-    margin-right:auto; */
-    min-height: 90vh;
-    margin-left:200px;
+    
+    min-height: 74vh;
+    margin-left:10%;
     margin-top:4px;
     margin-bottom: 4px;
-    /* position:relative;
-    top:14px;       */
+     border:1px solid black;
+   
 }
 
 .user-section{
-    /* margin-left:200px; */
-    padding: 1px 16px;
-    min-height: 90vh; 
-    /* display:flex; */
-    /* height: 1000px; */
-    /* position:relative;
-    top:-274px; */
-    /* flex-grow: 1; */
-    /* border:1px solid black; */
+
+    display:flex;
+    border:1px solid black;
   
+}
+
+
+
+
+
+
+
+
+
+
+
+
+.container-dash404{
+    /* border:1px solid black; */
+    background-color:#ffffff;
+    /* min-height: 75vh;
+    margin-left:8px;
+    margin-right:8px; */
+    display:flex;
+   
+   
+
+
+}
+
+.not-found-dash{
+  /* border:1px solid black; */
+  margin-top:6.2%;
+  background-color:#ffffff;
+  box-shadow:0 0 5px rgba(117, 116, 116, 0.6);
+  min-height: 50vh;
+  width:40%;
+  margin-left:auto;
+  margin-right:auto;
+
+}
+.not-found-dash h2{
+  text-align: center;
+
+ 
+
+}
+.not-found-dash h3{
+  text-align: center;
+ 
+
 
 }
 
