--- a/client/src/components/Dashboard/sidenav.css
+++ b/client/src/components/Dashboard/sidenav.css
@@ -4,27 +4,38 @@
     margin:0;
     padding:0;
     position:fixed;
-    top:98px;
-    width:150px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    top:10%;
+    width:10%;
     background-color: #242729;
     height:100%;
     overflow: auto;
     z-index:0;
-  
-    border-right:1px solid #2f3133;
-    /* min-height:40vh;
-    word-wrap: break-word; */
+    margin-left:-0.2%;
 
 }
+
 .side-nav-item{
-    /* transition:all 0.3s ease; */
-       /* border:1px solid black; */
-       /* width:110px; */
+    width:100%;
+     border:1px solid #242729;
        text-align: center;
+       transition: all 0.3s ease;
 }
-.side-nav-item:hover{
-    /* border-right:4px solid #00b625; */
-    border:1px solid rgb(218, 152, 218);
+.side-nav-text{
+    width:100%;
+    
+}
+.side-nav-item:hover {
+  
+    background-color: #2b2e30;
+    color:#fff;
+}
+.side-nav-active{
+    background-color: #2b2e30;
+    border-bottom:1px solid rgb(218, 152, 218);
+
 }
 .side-nav a{
     display:block;
@@ -32,43 +43,20 @@
     padding: 16px;
     text-decoration: none;
     font-weight:bold;
-    /* font-size:1.15em; */
     font-family:'acme';
 }
 
 
-
-.profile{
+.profile-image{
+    display:flex;
+    justify-content: center;
     /* border:1px solid white; */
-    width:18vh;
-    margin-left: auto;
-    margin-right: auto;
-
+    width:100%;
+    margin:-5% 0 5% 0 ;
 }
 
-.profile img{
-    /* border:1px solid white; */
-    position:relative;
-    top:7px;
-    left:16px;
-
-}
-.no-profile{
-
-    /* border:1px solid white; */
-    width:18vh;
-    margin-left: auto;
-    margin-right: auto;
-    margin-top:14px;
-
-}
-
-.no-profile img{
+.profile-image img{
     border:2px solid #2f3133;
     position:relative;
-    top:3px;
-    left:30px;  
     border-radius:50%;
-
-    
 }
