--- a/client/src/components/LatestDealsPage/latestDeals.css
+++ b/client/src/components/LatestDealsPage/latestDeals.css
@@ -24,6 +24,7 @@
 }
   
   .latest-deals-items-container{
+    min-height:65vh;
     margin-left:auto;
     margin-right:auto;
     padding:0.25%;
@@ -46,32 +47,6 @@
   
   }
 
-.pagination {
-   /* border:1px solid black; */
-   padding:4px;
-   width:80%;
-   margin-left: auto;
-   margin-right: auto;
-   display:flex; 
-   justify-content: center;
 
-}  
-
-.pagination li {
-  
-    border:1px solid grey;
-    display: inline-block;
-    padding-left: 12px;
-    padding-right: 12px;
-    padding-top:4px;
-    padding-bottom:4px;
-    color:grey;
-    cursor:pointer;
-
-} 
-
-.active{
-  border:1px solid black;
-}
 
 
