--- a/client/src/components/Loader/loader.css
+++ b/client/src/components/Loader/loader.css
@@ -27,6 +27,7 @@
               .page-loader-container{
                 width:100%;
                 min-height:100vh;
+                margin-top:0.5%;
                
                 display:flex;
                 flex-direction: column;                          
