--- a/client/src/components/MenClothingsPages/menClothings.css
+++ b/client/src/components/MenClothingsPages/menClothings.css
@@ -24,6 +24,7 @@
 }
   
   .men-clothings-items-container{
+    min-height:65vh;
     padding:0.25%;
     display:flex;
     flex-direction: column;
