--- a/client/src/components/WomenClothingsPages/womenClothings.css
+++ b/client/src/components/WomenClothingsPages/womenClothings.css
@@ -25,6 +25,7 @@
 }
   
   .women-clothings-items-container{
+    min-height:65vh;
     padding:0.25%;
     display:flex;
     flex-direction: column;
