--- a/client/src/components/WomenCollectionPage/womenCollection.css
+++ b/client/src/components/WomenCollectionPage/womenCollection.css
@@ -26,6 +26,7 @@
 }
   
   .women-collections-items-container{
+    min-height:65vh;
     padding:0.25%;
     display:flex;
     flex-direction: column;
