--- a/client/src/components/Header/SearchComponent/searchResult.css
+++ b/client/src/components/Header/SearchComponent/searchResult.css
@@ -8,44 +8,49 @@
 
 
 .search-result-container{
-    position: fixed;
-    top: 0;
+    /* position: fixed;
+    
+    top: 20%;
     left: 0;
     width:100%;
     height: 100%;
     background: rgba(0, 0, 0, 0.6);
     z-index:1;
-    overflow:auto;
+    overflow:auto; */
+   
 
 }
-
-  .search-results{
-    /* position: absolute;
-    top: calc(70% );
-    color:#aaa;
-    transition: 
-    top var(  --transition-duration)  ease,
-    font-size var(  --transition-duration)   ease,
-    color var(  --transition-duration) ease;
-    border:1px solid white;
-    width:500px;
-    background-color:white;
-    height:80%;
-    border:1px solid black;
+.search-content{
+    position: fixed;
+    width:30%;
+    margin-left:auto;
+    margin-right:auto;
     display:flex;
-    flex-direction: column; */
+    flex-direction:column;
+    /* justify-content: center; */
+    top:18%;
+    left:30%;
+    height: 50%;
+    overflow-y: scroll;
+   
+    z-index:1;
+    background-color: #242729;
+
+}
+  .search-results{
+    width:85%;
+    margin:0.6%;
+    margin-left:auto;
+    margin-right:auto;
+    color: white;
+    color: rgb(218, 152, 218);
+    /* color:#747474; */
+    padding:2%;
     display:flex;
     flex-direction:column;
     justify-content: center;
-    position:fixed;
-    width:30%;
-    min-height: 40vh;
-    top:50%;
-    left:50%;
-    transform: translate(-50%,-50%);
-    z-index:1;
-    background-color: #1d2c3f;
-
+    cursor: pointer;
+    box-shadow:0  2px #38393a;
 }
 
 .search-results p{
