--- a/client/src/components/ViewItemPage/view.css
+++ b/client/src/components/ViewItemPage/view.css
@@ -5,24 +5,8 @@
 
 
 
-.view-container{
-    background-color:#ffffff;
-    margin:8px;
-    border-radius:4px;
-}
 
 
-
-.view-item-container{
-    width:60%;
-    height:600px;
-    margin-left:auto;
-    margin-right: auto;
-    display:flex;
-    flex-direction: column;
-    /* border:1px solid black; */
-
-}
 .view-main{
     display:flex;
     flex-direction:row;
@@ -204,17 +188,24 @@
     display:flex;
     flex-direction:column;
     background-color:#ffffff;
-    margin:4%;
-    min-height: 50vh;
+    margin-top:0.5%;
+    margin-bottom:0.6%;
+    min-height: 70vh;
+    border:1px solid black;
   
 }
 .view-item-container{
     display:flex;
     flex-direction: column;
     width:60%;
-    min-height:30vh;
+    min-height:70vh;
     margin-left:auto;
     margin-right: auto;
+    border:1px solid yellow;
+    margin-top:0.6%;
+    margin-bottom:0.6%;
+
+    
    
 }
 
@@ -225,10 +216,15 @@
 
 }
 .view-product-img{
+    border:1px solid black;
+    width:50%;
+    min-height:50vh;
 
 }
 
 .view-item-details{
+    border:1px solid black;
+    width:50%;
 
 }
 
@@ -236,22 +232,94 @@
     display: flex;
     flex-direction: row;
     width:100%;
+    border:1px solid black;
 
 }
+.view-item-size-contr{
+    border:1px solid rgb(202, 14, 124);
+    margin-top:0.5%;
+    margin-bottom:0.6%;
+    min-height: 10vh;
+
+}
+
 
 .view-add-bttn{
     display:flex;
     flex-direction:column;
     width:100%;
+    border:1px solid green;
+    margin-top:0.5%;
+    margin-bottom:0.6%;
+    min-height:20vh;
+
+
+}
+.view-add-bttn h4{
+   margin-left:26%;
+}
+.view-add-section{
+    width:100%;
+    display:flex;
+    flex-direction:row;
+    justify-content: center;
+    flex-wrap: wrap;
+    border:1px solid blue;
+    padding:3px;
+    margin-top: auto;
+    margin-bottom: auto;
 
 }
 
-.view-qty{
+.view-quantity{
+    width: 30%;
+    display: flex;
+    flex-direction: column;
+    border:1px solid black;
+    margin-right: 0.3%;
+
+}
+
+
+.view-add-qty{
     display: flex;
     flex-direction: row;
-   
+    border:1px solid black; 
+    width: 100%;
+}
+.view-add-qty button{
+    width:40%;
+    height:45px;
+    position:relative;
+    background-color:rgb(218, 152, 218);
+    transition:all 0.3s ease-in-out;
+    border:none;
+    color:#242729;
+    font-weight: bold;
+  
+
+}
+.view-add-qty input{
+    width:20%;
 
 }
 .view-add-to-cart{
+    width: 40%;
+    border:1px solid red;
+    /* height:55px; */
+    margin-top: auto;
+    margin-bottom: auto;
 
+
+}
+.view-add-to-cart button{
+    width:100%;
+    height:45px;
+    position:relative;
+    background-color:rgb(218, 152, 218);
+    transition:all 0.3s ease-in-out;
+    border:none;
+    color:#242729;
+    font-weight: bold;
+   
 }
