--- a/client/src/components/Checkout/checkout.css
+++ b/client/src/components/Checkout/checkout.css
@@ -23,13 +23,10 @@
 .checkout{
     display:flex;
     flex-direction: column;
-    /* border-top:1px solid black; */
+    /* border:1px solid black; */
     min-height: 75vh;
     width:45%;
-    margin-left:auto;
-    margin-right:auto;
-    position: relative;
-    margin-top:45px;
+    margin: 2% auto 2% auto;
     box-shadow:0 0 5px rgba(117, 116, 116, 0.8);
 }
 .checkout-title{
@@ -46,27 +43,51 @@
     /* box-shadow:0px 2px 2px 2px rgba(117, 116, 116, 0.6); */
 }
 
-.text-primary{
+
+
+
+.checkout-item-container{
+    /* border:1px solid black; */
+    margin:3% 3% 0 3%;
+    padding:3px;
+    box-shadow:0 0 2px rgba(117, 116, 116, 0.8);
+
+}
+.checkout-item-panel{
+    display:flex;
+    flex-direction: row;
+
+}
+.checkout-item-image{
+    /* border:1px solid black; */
+    width:50%;
+    min-height:50vh;
 
 }
 .checkout-product{
     display:flex;
     flex-direction:column;
+    justify-content: center;
     /* align-items: center; */
+    /* border:1px solid blue; */
     padding:8px;
-    width: 60%;
+    width: 50%;
+    min-height:50vh;
     margin-left:auto;
     margin-right: auto;
     padding:0 0 4% 5%;
-    border:1px solid #ccc;
+   
+
+}
+.text-primary{
 
 }
 .checkout-data{
     color:rgb(218, 152, 218);
 }
-.checkout-product span{
+.checkout-product p{
     font-weight:bold;
-    margin-top:12px;
+   
 }
 .checkout-total{
     display:flex;
@@ -78,7 +99,34 @@
 .checkout-btn{
     display:flex;
     flex-direction:row;
+    justify-content: center;
+    /* border:1px solid black;
+    background-color: #242729; */
     /* align-items: center;
     padding:8px; */
 
 }
+
+
+
+.full-checkout-button{
+    width:40%;
+    margin:5%;
+    /* border:1px solid green; */
+}
+.full-checkout-button button{
+    height:45px;
+    width:100%;
+    border:0;
+    background-color: rgb(218, 152, 218);
+    color: #ffffff;
+    font-size: 1em;
+    font-family:'acme';
+    font-weight: bold;
+   
+}
+
+
+
+
+
