--- a/client/src/components/Checkout/checkout.css
+++ b/client/src/components/Checkout/checkout.css
@@ -1,119 +1,89 @@
 
 
-
-
-
-
-
-
-
-
-
-
 .checkout-container{
     display:flex; 
     flex-direction:column; 
-    /* border:1px solid  black; */
     background-color: #ffffff;
     min-height: 120vh;
     margin:6px;
-
-
 }
 .checkout{
     display:flex;
     flex-direction: column;
-    /* border:1px solid black; */
     min-height: 75vh;
     width:45%;
     margin: 2% auto 2% auto;
     box-shadow:0 0 5px rgba(117, 116, 116, 0.8);
 }
 .checkout-title{
-     /* color:#ccc; */
-    /* border:1px solid black; */
     color: rgb(218, 152, 218);
     margin:6px;
     border-radius: 4px;
     padding:6px;
-    /* width:15%; */
     height:45px;
     margin-right: auto;
     margin-left:auto;
-    /* box-shadow:0px 2px 2px 2px rgba(117, 116, 116, 0.6); */
 }
 
-
-
-
 .checkout-item-container{
-    /* border:1px solid black; */
     margin:3% 3% 0 3%;
     padding:3px;
     box-shadow:0 0 2px rgba(117, 116, 116, 0.8);
-
 }
+
 .checkout-item-panel{
     display:flex;
     flex-direction: row;
-
 }
+
 .checkout-item-image{
-    /* border:1px solid black; */
     width:50%;
     min-height:50vh;
-
 }
+
 .checkout-product{
     display:flex;
     flex-direction:column;
     justify-content: center;
-    /* align-items: center; */
-    /* border:1px solid blue; */
     padding:8px;
     width: 50%;
     min-height:50vh;
     margin-left:auto;
     margin-right: auto;
     padding:0 0 4% 5%;
-   
-
 }
-.text-primary{
 
-}
+/* .text-primary{
+
+} */
+
 .checkout-data{
     color:rgb(218, 152, 218);
 }
+
 .checkout-product p{
     font-weight:bold;
    
 }
+
 .checkout-total{
     display:flex;
     flex-direction:column;
     align-items: center;
     padding:8px;
-
 }
+
 .checkout-btn{
     display:flex;
     flex-direction:row;
     justify-content: center;
-    /* border:1px solid black;
-    background-color: #242729; */
-    /* align-items: center;
-    padding:8px; */
-
 }
-
-
 
 .full-checkout-button{
     width:40%;
     margin:5%;
-    /* border:1px solid green; */
 }
+
 .full-checkout-button button{
     height:45px;
     width:100%;
@@ -123,10 +93,4 @@
     font-size: 1em;
     font-family:'acme';
     font-weight: bold;
-   
 }
-
-
-
-
-
