--- a/client/src/components/Footer/footer.css
+++ b/client/src/components/Footer/footer.css
@@ -4,13 +4,10 @@ footer{
     flex-direction: column;
     background-color:#242729;
     min-height: 87vh;
-     /* border: 2px solid  rgb(218, 152, 218); */
      z-index:1;
 
 }
 .dashboard-footer {
-    
-   
     margin-left:9.8%;
     display:flex;  
     flex-direction: column;
@@ -19,10 +16,7 @@ footer{
     position:relative;
     min-height: 87vh;
     border-left:1px solid #2f3133;
-  
     z-index:0;
-  
-
 }
 
 footer a {
@@ -34,69 +28,49 @@ footer a {
 }
  footer a:hover {
     text-decoration: underline;
-    /* color:white; */
 }
 footer li{
     list-style-type: none;
-
 }
 .ft-title{
     color: rgb(218, 152, 218);
-/*    
-    -webkit-text-stroke-width:1.3px black;
-    text-shadow: 
-    3px 3px 0 #000,
-    -1px -1px 0 #000,
-    1px -1px 0 #000,
-    -1px 1px 0 #000,
-    1px 1px 0 #000; */
-
-
-  
 }
+
 .footer-main{
     display:flex;
     flex-wrap:wrap;
     justify-content: space-around;
     margin-top:50px;
-    
-    /* border-top:2px solid rgb(218, 152, 218); */
+}
+
+/* .footer-main-item{
    
-    /* border:1px solid blue; */
- 
-}
-.footer-main-item{
-    /* margin-bottom:10px;
-   */
-}
+} */
 .footer-legal{
-   
     margin-top:120px;
     display:flex;
     flex-direction:row;
     flex-wrap:wrap;
     border-bottom:1px solid #2f3133;
     border-top:1px solid #2f3133;
-    /* background-color: #2f3133; */
     color: rgb(218, 152, 218);
-  
-
 }
+
 .footer-legal-list {
     width: 100%;
     display: flex;
     flex-wrap: wrap;
     justify-content:space-between;
 }
+
 .footer-legal-list :nth-last-child(1){
   margin-right: 10px;
-
 }
 
 .footer-legal-list a{
     color: rgb(218, 152, 218);
-
 }
+
 .footer-main-content{
     display:flex;
     flex-direction:row;
@@ -104,38 +78,27 @@ footer li{
     flex-wrap: wrap;
     background-color:#242729;
     border-bottom:1px solid #38393a;
-    /* margin:6px; */
     padding:4px;
     color:white;
     min-height:20vh;
-    /* border:1px solid blue; */
-     
-  
-
-
 }
-.footer-form{
-      /* border:1px solid white; */
-      /* width:400px; */
-    /* margin-right:4px; */
-}
+
+/* .footer-form{
+    
+} */
+
 .footer-form p{
     color: rgb(218, 152, 218);
     font-size: 0.9em;
-
 }
 
 .footer-form form input[type="text"] {
-    /* border: 0; */
     padding: 0.625rem;
     margin-top: 0.3125rem;
-    /* margin-right:0.422rem; */
     color: rgb(218, 152, 218);
     border-radius:5px;
-   
     width:250px;
     height:40px;
-    /* border-radius: 4px  0px 0px 4px; */
     background-color: #242729;
     border: 2px solid #38393a;
     transition:all 0.5s ease-in-out;
@@ -143,51 +106,41 @@ footer li{
     font-weight:bold;
     font-family:'abel';
 }
+
 .footer-form form input[type="text"].not-empty,
 .footer-form form input[type="text"]:focus {
-    /* background-color:#ccc; */
-    /* color:black; */
     font-family:'abel';
     color: rgb(218, 152, 218);
     background-color: #242729;
     border:2px solid rgb(218, 152, 218) ;
     outline: none;
-
-
 }
+
 .footer-form form button {
     height:40px;
-   
     color: rgb(218, 152, 218);
     border-radius:5px;
     cursor: pointer;
     border:0px;
-    /* padding: 8px; */
-    /* margin-top: 0.3125rem; */
     transition:all 0.4s ease-in-out;
     font-weight:bold;
     margin-left:4px;
     background-color: #242729;
     border: 2px solid #38393a;
 }
+
 .footer-form form button:hover{
     transform:scale(1.05) ;
-    /* border:2px solid rgb(190, 87, 190); */
     border:2px solid rgb(218, 152, 218);
-    /* text-decoration: underline; */
-    /* background-color:#ccc; */
-    /* font-weight:bold; */
-   
-    /* color:rgb(190, 87, 190); */
-   
-    /* font-size: 0.8em; */
 }
+
 .sub-err-cont p{
     font-size:0.8em;
     color:rgb(248, 10, 10);
     animation-name:animatetop;
     animation-duration:2s;
 }
+
 @keyframes animatetop{
     from{
         right: -12px;
