added a back button to pages under the see all routes in index

--- a/client/src/components/LatestDealsPage/latestDeals.css
+++ b/client/src/components/LatestDealsPage/latestDeals.css
@@ -11,12 +11,21 @@
 }
 
 .latest-deals-items-header{
+  /* border:1px solid black; */
   display:flex;
-  flex:1;
-  justify-content:center;
+  flex-direction:row;
+  /* justify-content:center; */
   background-color:#ffffff;
   color:black;
   margin-bottom:0.15%;
+}
+
+.latest-deals-title{
+  /* border:1px solid green; */
+  display:flex;
+  flex:1;
+  justify-content: center;
+
 }
   
 .latest-deals-items-container{
