--- a/client/src/components/MenCollectionPage/menCollection.css
+++ b/client/src/components/MenCollectionPage/menCollection.css
@@ -35,3 +35,11 @@
     justify-content:space-between;
     margin-top:0.3%;
 }
+
+.men-collections-title{
+    /* border:1px solid green; */
+    display:flex;
+    flex:1;
+    justify-content: center;
+  
+  }
