--- a/client/src/components/WomenCollectionPage/womenCollection.css
+++ b/client/src/components/WomenCollectionPage/womenCollection.css
@@ -14,6 +14,15 @@
   color:black;
   margin-bottom:2px;
 }
+
+.women-collections-title{
+  /* border:1px solid green; */
+  display:flex;
+  flex:1;
+  justify-content: center;
+
+}
+  
   
 .women-collections-items-container{
   min-height:65vh;
