--- a/client/src/components/Collection/collection.css
+++ b/client/src/components/Collection/collection.css
@@ -12,6 +12,11 @@
   text-decoration: none;
   color:black;
 }
+.items-details span{
+  font-weight: bold;
+}
+
+
 
 
 @media only screen  and (max-width:414px){
