--- a/client/src/components/SeeAllPage/seeAll.css
+++ b/client/src/components/SeeAllPage/seeAll.css
@@ -19,9 +19,7 @@
     box-shadow:0px 2px 2px 2px rgba(117, 116, 116, 0.6);
 }  
 .see-all-items-details{
-    display:flex;
-    flex-direction: column;
-    flex-wrap: nowrap;
+   
     margin-top: 2px;
     margin-bottom:2px;
     width:90%; 
@@ -29,6 +27,9 @@
     margin-right: auto;
     margin-left: auto;
     padding:3%;
+}
+.see-all-items-details span{
+    font-weight: bold;
 }
 
 .see-all-items-details img{
