--- a/client/src/components/404/404.css
+++ b/client/src/components/404/404.css
@@ -1,18 +1,41 @@
+
+
+
+
+
+
+
 .not-found-container{
     background-color:#ffffff;
-    min-height: 60vh;
+    display:flex;
+    flex-direction: column;
+    justify-content: center;
+    width:100%;
+    /* border:1px solid black; */
+    min-height: 70vh;
     margin:8px;
 }
 
-.not-found-content{
-    position:relative;
-    top:14px;
+.not-found-panel{
+    display:flex;
+    flex-direction: column;
+    justify-content: center;
+    /* margin-top:3%; */
     background-color:#ffffff;
     box-shadow:0 0 5px rgba(117, 116, 116, 0.6);
+    /* border:1px solid black; */
     min-height: 50vh;
     width:40%;
     margin-left:auto;
     margin-right:auto;  
+}
+.not-found-content{
+    /* border:1px solid black; */
+    width:90%;
+    margin-left:auto;
+    margin-right:2%; 
+  
+
 }
 .not-found h2{
     text-align: center;
