--- a/client/src/components/Cart/cart.css
+++ b/client/src/components/Cart/cart.css
@@ -40,9 +40,11 @@
     display:flex;
     flex-direction:row;
     background-color: #ffffff;
+    border:1px solid black;
   
 }
 .cart-title{
+   
     display:flex;
     flex:1;
     text-align: center;
@@ -66,8 +68,14 @@
 }
 
 .cart-body{
+   
+    display:flex;
+    flex-direction: column;
+    justify-content: space-between;
     background-color: #ffffff;
     margin:4px ;
+    /* border:1px solid black; */
+    min-height: 60vh;
 }
 
 .cart-body h2{
@@ -75,7 +83,7 @@
     margin:6px;
     font-size: 1.3em;
     font-family:'acme';
-     color:rgb(230, 230, 230); 
+    
 }
 .cart-title h3{
     color: rgb(218, 152, 218);
